My Hobbies page added

--- a/techdegree-project-1/index.html
+++ b/techdegree-project-1/index.html
@@ -19,8 +19,7 @@
             <ul class="nav">
               <li class="name">Jordan Moyer</li>
               <li><a href="index.html">Home</a></li>
-              <li><a href="#">Experience</a></li>
-              <li><a href="#">Contact Me</a></li>
+              <li><a href="my-hobbies.html">My Hobbies</a></li>
             </ul>
         </nav>
 
@@ -28,10 +27,8 @@
         <header>
             <img src="images/me.jpg" alt="A photo of Jordan Moyer" class="profile-image">
             <h1 class="tag name">Hello! I'm Jordan.</h1>
-            <div>
-                <p class="tag location"><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;Physically in Dayton, Ohio</p>
-                <p class="tag location"><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;Mentally in Marrakech, Morocco</p>
-            </div>
+            <p class="tag location"><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;Physically in Dayton, Ohio</p>
+            <p class="tag location"><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;Mentally in Marrakech, Morocco</p>
          </header>
         <!-- end header section -->
          
@@ -41,35 +38,31 @@
                 <h2>To sum it up...</h2>
                 <p>I'm a detail-oriented creative backed by the power of positive thinking and espresso. I love everything from illustration and pattern design to the perfectly aligned pixels of the web.</p>
                 <p>As a self-proclaimed nerd, I'm always looking for a new book to read or a new course to take to expand my skillset.</p>
+                <img src="images/my-home.jpg" alt="Image of Jordan's apartment">
             </section>
         <!-- end card one -->
 
         <!-- start card two -->
             <section class="card">
                 <h2>Education &amp; Experience</h2>
-                <article>
-                    <img src="" alt="">
-                    <h3>Education</h3>
-                    <p>2013 - 2015: The Modern College of Design<br>
-                    Associates Degree of Applied Business in Advertising Art</p>
-                    <p>March 2021 - Present: Treehouse Techdegree Program<br>
-                    Currently working to complete the Front End Web Developer Treehouse Techdegree.</p>
-                </article>
-                <article>
-                    <img src="" alt="">
-                    <h3>Experience</h3>
-                    <p>August 2015 - July 2017: Graphica, LLC • Graphic Designer<br>
-                    Created logos, business cards, flyers, and other printed materials for clients such as Dayton Children's Hospital, Honeywell Aerospace, and Airstream.</p>
-                    <p>January 2018 - Present: The Jewish Federation of Greater Dayton • Web &amp; Social Media Coordinator &amp; Graphic Designer<br>
-                    Responsible for maintaining and designing the jewishdayton.org website, corresponding Facebook pages, and email campaigns as well as print materials such as event branding, brochures, flyers, and other branded materials. </p>
-                </article>
+                <h3>Education</h3>
+                <p>2013 - 2015: The Modern College of Design<br>
+                Associates Degree of Applied Business in Advertising Art</p>
+                <p>March 2021 - Present: Treehouse Techdegree Program<br>
+                Currently working to complete the Front End Web Developer Treehouse Techdegree.</p>
+                <img src="images/divider-bar.png" alt="A gradient bar" class="divider">
+                <h3>Experience</h3>
+                <p>August 2015 - July 2017: Graphica, LLC • Graphic Designer<br>
+                Created logos, business cards, flyers, and other printed materials for clients such as Dayton Children's Hospital, Honeywell Aerospace, and Airstream.</p>
+                <p>January 2018 - Present: The Jewish Federation of Greater Dayton • Web &amp; Social Media Coordinator &amp; Graphic Designer<br>
+                Responsible for maintaining and designing the jewishdayton.org website, corresponding Facebook pages, and email campaigns as well as print materials such as event branding, brochures, flyers, and other branded materials. </p>
             </section>
         <!-- end card two -->
-
+s
          <!-- start card three -->
             <section class="card">
                 <h2>Goals</h2>
-                <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+                <p>I want to master the process of developing websites and grow my knowledge, skills and abilities in:</p>
                 <ul class="skills">
                     <li>HTML</li>
                     <li>CSS</li>
@@ -77,7 +70,7 @@
                     <li>Pyton</li>
                     <li>Ruby</li>
                 </ul>
-                <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+                <p>I would like to work for a web design firm creating beautiful, responsive websites that help brands tell their stories.</p>
             </section>
         <!-- end card three -->
         </main>
@@ -85,9 +78,9 @@
         <!-- start footer -->
         <footer>
             <ul>
-              <li><a href="#" class="social twitter">Twitter</a></li>
-              <li><a href="#" class="social linkedin">LinkedIn</a></li>
-              <li><a href="#" class="social github">Github</a></li>
+              <li><a href="https://twitter.com/jordanmoyer_" target="_blank" class="social twitter">Twitter</a></li>
+              <li><a href="https://www.linkedin.com/in/jordaninbold/" target="_blank" class="social linkedin">LinkedIn</a></li>
+              <li><a href="https://github.com/jordaninbold" target="_blank" class="social github">Github</a></li>
             </ul>
             <p class="copyright">&copy; 2021, Jordan Moyer</p>
         </footer>
