CSS updated and final changes made

--- a/techdegree-project-1/index.html
+++ b/techdegree-project-1/index.html
@@ -24,7 +24,7 @@
         </nav>
 
         <!-- start header section -->
-        <header>
+        <header class="home-header">
             <img src="images/me.jpg" alt="A photo of Jordan Moyer" class="profile-image">
             <h1 class="tag name">Hello! I'm Jordan.</h1>
             <p class="tag location"><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;Physically in Dayton, Ohio</p>
