--- a/techdegree-project-1/my-hobbies.html
+++ b/techdegree-project-1/my-hobbies.html
@@ -24,7 +24,7 @@
         </nav>
 
         <!-- start header section -->
-        <header>
+        <header class="hobbies-header">
             <img src="images/me.jpg" alt="A photo of Jordan Moyer" class="profile-image">
             <h1 class="tag name">Hello! I'm Jordan &amp; these are my hobbies.</h1>
          </header>
@@ -44,15 +44,20 @@
         <!-- start card two -->
             <section class="card">
                     <h2>These are a few of my favorite things...</h2>
-                    <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+                    <p>I started out painting and drawing at a very young age, and that eventually translated to attending design school and falling in love with typefaces, digital illustration, and website design.</p>
+                    <img src="images/divider-bar.png" alt="A gradient bar" class="divider">
+                    <h3>Other non-creative things I love:</h3>
                     <ul class="skills">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>Pyton</li>
-                        <li>Ruby</li>
+                        <li>Cooking</li>
+                        <li>The Office</li>
+                        <li>My cat Luna</li>
+                        <li>Traveling</li>
+                        <li>My fiancé</li>
+                        <li>Reading</li>
+                        <li>Animal Crossing</li>
+                        <li>Stardew Valley</li>
                     </ul>
-                    <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+                    <p>When I'm not creating something or working on a project I can be found hanging out with my cat, playing video games, or dreaming about where I'll travel next.</p>
             </section>
         <!-- end card two -->
 
