--- a/techdegree-project-1/index.html
+++ b/techdegree-project-1/index.html
@@ -20,6 +20,7 @@
               <li class="name">Jordan Moyer</li>
               <li><a href="index.html">Home</a></li>
               <li><a href="my-hobbies.html">My Hobbies</a></li>
+              <li><a href="contact.html">Contact Me</a></li>
             </ul>
         </nav>
 
