CSS updated on contact page

--- a/techdegree-project-1/contact.html
+++ b/techdegree-project-1/contact.html
@@ -15,7 +15,7 @@
     <!-- start body section -->
     <body>
 
-        <nav class="contact-nav">
+        <nav class="main-nav">
             <ul class="nav">
               <li class="name">Jordan Moyer</li>
               <li><a href="index.html">Home</a></li>
@@ -39,7 +39,7 @@
                 <p> Email me at: <a href="mailto:jordaninbold@gmail.com">jordaninbold@gmail.com</a></p>
                 <p> Call me at: 937-623-7522</p>
                 <img src="images/divider-bar.png" alt="A gradient bar" class="divider">
-                <p>If you would like to see my portfolio of work, go to <a href="https://www.jordaninbold.com/">jordaninbold.com</a>.</p>
+                <p>If you would like to see my portfolio of work, go to <a href="https://www.jordaninbold.com/" target="_blank">jordaninbold.com</a>.</p>
             </section>
         <!-- end card one -->
 
